--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <h1>Example:4</h1>
 <p style="color:red">Source version control</p>
 <button>Book Now</button>
+<button>Pay Now</button>
 </body>
 
 </html>
